linker error jpackageapplauncher on Windows 32bit

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 15
    • Affects Version/s: 15
    • Component/s: tools
    • None
    • b24
    • x86
    • windows

      currently we run into this link error :
      jpackageapplauncher

      * For target support_native_jdk.incubator.jpackage_jpackageapplauncher_BUILD_JPACKAGE_APPLAUNCHEREXE_link:
      LINK : fatal error LNK1561: entry point must be defined

      looks like the WinMain signature in
      src\jdk.incubator.jpackage\windows\native\applauncher\WinLauncher.cpp
      has to be adjusted.

            Assignee:
            Matthias Baesken
            Reporter:
            Matthias Baesken
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: