8244183: linker error jpackageapplauncher on Windows 32bit

Reviewed-by: asemenyuk